# msgsock

./: LICENSE  README.md  msgsock.py  pyproject.toml
