[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "msgsock"
authors = [{name = "Richard Si", email = "sichard26@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
python-requires = ">=3.8"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ichard26/msgsock"
